# Battle-Ship

./: .gitignore  go.mod  index.html  main.go  script.js  style.css
ai/: bot.go
feniks-battleship/: .gitignore  Cargo.toml  build.sh  src.lib.rs
feniks-battleship/src/: lib.rs
feniks-battleship/src.analysis/: mod.rs
feniks-battleship/src.engine/: hypothesis.rs  mod.rs
feniks-battleship/src.old/genetics/: mod.rs
feniks-battleship/src/analysis/: alpha_beta.rs  solver.rs
feniks-battleship/src/engine/: hypothesis.rs  mod.rs
feniks-battleship/src/genetics/: mod.rs
feniks-battleship/src/srcs/: lib.rs
feniks-battleship/src/srcs/analysis/: solver.rs
feniks-battleship/src/srcs/engine/: mod.rs
feniks-battleship/src/utils/: mod.rs
feniks-battleship/srcs/analysis/: solver.rs
feniks-battleship/srcs/genetics/: mod.rs
feniks-battleship/web/: LICENSE  index.html  main.js  style.css
game/: logic.go  types.go
ui/: view.go
web/: index.html  main.js
