[package]
name = "feniks_ai"
version = "0.1.0"
authors = ["Jules <agent@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[profile.release]
lto = true
opt-level = "s"
